--- a/tensorflow/01_ML-basics/regression.ipynb
+++ b/tensorflow/01_ML-basics/regression.ipynb
@@ -914,6 +914,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "Db7Auq1yXUvh"
@@ -2856,7 +2863,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "test",
+   "display_name": "CNN_tensorflow2.3",
    "language": "python",
    "name": "python3"
   },
@@ -2870,11 +2877,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.7.16"
   },
   "vscode": {
    "interpreter": {
-    "hash": "39d61b77e830ed8d98684fb8ffddb0a201181e6679241f14e7ac939d312d2885"
+    "hash": "7343f217a3390225cbf8718410123dae6e0d9d8a3f58df464aa70acc781e537f"
    }
   }
  },
