--- a/tensorflow/01_ML-basics/classification.ipynb
+++ b/tensorflow/01_ML-basics/classification.ipynb
@@ -99,14 +99,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "FbVhjPpzn6BM"
    },
    "source": [
-    "이 튜토리얼에서는 운동화나 셔츠 같은 옷 이미지를 분류하는 신경망 모델을 훈련합니다. 상세 내용을 모두 이해하지 못해도 괜찮습니다. 여기서는 완전한 텐서플로(TensorFlow) 프로그램을 빠르게 살펴 보겠습니다. 자세한 내용은 앞으로 배우면서 더 설명합니다.\n",
-    "\n",
-    "여기에서는 텐서플로 모델을 만들고 훈련할 수 있는 고수준 API인 [tf.keras](https://www.tensorflow.org/guide/keras)를 사용합니다."
+    "이 튜토리얼에서는 운동화나 셔츠 같은 옷 이미지를 분류하는 신경망 모델을 훈련합니다. 상세 내용을 모두 이해하지 못해도 괜찮습니다. 여기서는 완전한 텐서플로(TensorFlow) 프로그램을 빠르게 살펴 보겠습니다. 자세한 내용은 앞으로 배우면서 더 설명합니다."
    ]
   },
   {
@@ -7630,7 +7629,6 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "test",
    "language": "python",
    "name": "python3"
   },
@@ -7644,11 +7642,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.7.16"
   },
   "vscode": {
    "interpreter": {
-    "hash": "39d61b77e830ed8d98684fb8ffddb0a201181e6679241f14e7ac939d312d2885"
+    "hash": "7343f217a3390225cbf8718410123dae6e0d9d8a3f58df464aa70acc781e537f"
    }
   }
  },
