test keras tuner

--- a/tensorflow/01_ML-basics/keras_tuner.ipynb
+++ b/tensorflow/01_ML-basics/keras_tuner.ipynb
@@ -484,6 +484,15 @@
     "\n",
     "모델 하이퍼파라미터를 능동적으로 조정하기 위한 TensorBoard의 [HParams Dashboard](https://www.tensorflow.org/tensorboard/hyperparameter_tuning_with_hparams)도 확인해 보세요."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test 완료 (20230601)"
+   ]
   }
  ],
  "metadata": {
