--- a/tensorflow/01_ML-basics/classification.ipynb
+++ b/tensorflow/01_ML-basics/classification.ipynb
@@ -1371,6 +1371,15 @@
    "source": [
     "예상과 같이 모델이 레이블을 예측합니다."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test 완료 (20230601)"
+   ]
   }
  ],
  "metadata": {
